MB-42306 [1/2]: Add onDiskPrepareBytes to vbucket_state

To allow a VBucket to track the space consumed by SyncWrite prepares,
add a new onDiskPrepareBytes member variable to vbucket_state.

* onDiskPrepareBytes: Total number of bytes that SyncWrite prepares
  take on-disk (including any compression the KVStore may have
  applied).

This is updated in a similar way to onDiskPrepares (the number of
prepares on disk).

Change-Id: I836e837ba2d2ad049cfaf606ea2eca8f8bc4b93d
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/139272
Well-Formed: Build Bot <build@couchbase.com>
Tested-by: Dave Rigby <daver@couchbase.com>
Reviewed-by: Jim Walker <jim@couchbase.com>