engines/ep/src/kvstore.h
@@ -103,6 +103,7 @@ struct CompactionStats {
     size_t collectionsDeletedItemsPurged = 0;
     uint64_t tombstonesPurged = 0;
     uint64_t preparesPurged = 0;
+    uint64_t prepareBytesPurged = 0;
     FileInfo pre;
     FileInfo post;
 };
