engines/ep/tests/module_tests/evp_store_warmup_test.cc
@@ -1492,6 +1492,7 @@ TEST_P(DurabilityWarmupTest, testHPSPersistedAndLoadedIntoVBState) {
     auto vbstate = *kvstore->getVBucketState(vbid);
     ASSERT_EQ(0, vbstate.persistedPreparedSeqno);
     ASSERT_EQ(0, vbstate.onDiskPrepares);
+    ASSERT_EQ(0, vbstate.getOnDiskPrepareBytes());
 
     // Check the Prepared
     const int64_t preparedSeqno = 1;
@@ -1511,6 +1512,9 @@ TEST_P(DurabilityWarmupTest, testHPSPersistedAndLoadedIntoVBState) {
     // @TODO: RocksDB currently does not track the prepare count
     if ((std::get<0>(GetParam()).find("Rocksdb") == std::string::npos)) {
         EXPECT_EQ(1, vbstate.onDiskPrepares);
+        // Hard to predict the size of the prepare on-disk, given it will
+        // be compressed by couchstore. For simplicity just check it's non-zero.
+        EXPECT_GT(vbstate.getOnDiskPrepareBytes(), 0);
     }
 
     // Warmup
@@ -1523,6 +1527,7 @@ TEST_P(DurabilityWarmupTest, testHPSPersistedAndLoadedIntoVBState) {
     // @TODO: RocksDB currently only has an estimated prepare count
     if ((std::get<0>(GetParam()).find("Rocksdb") == std::string::npos)) {
         EXPECT_EQ(1, vbstate.onDiskPrepares);
+        EXPECT_GT(vbstate.getOnDiskPrepareBytes(), 0);
     }
 }
 
